# statusline-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: extvars.rs  format.rs  main.rs  vars.rs
tests/golden/: p1.json  p1.out  p2.json  p2.out  p3.json  p3.out  p4.json  p4.out
