[package]
name = "sl"
version = "0.1.0"
edition = "2021"
description = "A fast, dependency-light status line renderer for Claude Code, written in Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/mlamp/statusline-rs"
readme = "README.md"
keywords = ["claude-code", "statusline", "cli", "terminal", "prompt"]
categories = ["command-line-utilities"]

[[bin]]
name = "sl"
path = "src/main.rs"

[dependencies]
serde_json = "1"
gix = { version = "0.85", features = ["status"] }
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
